--- a/estilos.css
+++ b/estilos.css
@@ -1,34 +1,89 @@
 * {
-    box-sizing:border-box;
+    box-sizing: border-box;
 }
 body {
     margin: 0;
-    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .row {
     display: flex;
 }
+.section-1 {
+    display: flex;
+    background-color: #F5EEF5;
+}
+.section-2 {
+    display: flex;
+    background-color: #FAF5F3;
+}
+.section-3 {
+    display: flex;
+    background-color: #F2F9F8;
+}
+.section-4 {
+    display: flex;
+    background-color: #000000;
+}
 .estilos {  
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    text-align: center;
     height: 350px;
+}
+.estilos2 {
+    height: 150px;
+}
+.estilos3 {
+    height: 250px;
 }
 .column-1 {
     width: 100%;
-    background-color: rgb(238, 195, 76);
 }
 .column-2 {
     width: 50%;
-    background-color: rgb(76, 214, 238);
 }
 .column-4 {
     width: 25%;
-    background-color: rgb(76, 238, 76);
+}
+.marginleft {
+    margin-left: 50px;
 }
 .p1 {
-    
+    margin-top: 50px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.p2 {
+    margin-top: 60px;
+    font-size: 60px;
+    font-weight: bold;
+    color: rgb(8, 102, 119);
+}
+.p3 {
+    margin-top: 50px;
+    font-size: 26px;
+}
+.p4 {
+    font-size: 37px;
+    color: gray;
+}
+.p5 {
+    font-weight: bold;
+    color: white;
+    margin-top: 95px;
+}
+.p6 {
+    color: white;
+    font-size: 10px;
+}
+.bold {
+    margin-top: 90px;
+    font-weight: bold;
+}
+.img {
+    height: 275px;
+    width: 275px;
+    display: block;
+    margin: auto;
+    margin-top: 40px;
+    border-radius: 10px;
 }
 @media screen and (max-width: 600px) {
     .column-2 {
