--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,3 @@
-* {
-    box-sizing: border-box;
-}
 body {
     margin: 0;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -85,8 +82,33 @@ body {
     margin-top: 40px;
     border-radius: 10px;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
+    .row {
+        flex-direction: row;
+    }
+    .section-1 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .section-2 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .section-3 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .section-4 {
+        display: flex;
+        flex-wrap: wrap;
+    }
     .column-2 {
-        width: 600px;
+        width: 100%;
+    }
+    .column-4 {
+        width: 50%;
+    }
+    .img {
+    
     }
 }
